--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
                 <li><a href="{{ site.baseurl }}/">Home</a></li>
                 <li><a href="{{ site.baseurl }}/about">About</a></li>
                 <!--<li><a href="{{ site.baseurl }}/archive">Archive</a></li>-->
-                <!--<li><a href="{{ site.baseurl }}/blog">Blog</a></li>-->
+                <li><a href="{{ site.baseurl }}/blogs">Blogs</a></li>
                 <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
