Added event feedback form

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,7 @@
             <li><a href="{{ site.baseurl }}/about">About Us</a></li>
             <li><a href="{{ site.baseurl }}/contact">Contact us</a></li>
             <li><a href="{{ site.baseurl }}/blogs">Blogs</a></li>
+            <li><a href="{{ site.baseurl }}/feedback">Feedback</a></li>
             <!--<li><a href="#">Terms</a></li>-->
           </ul>
         </div>
