--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,6 +27,7 @@
                 <!--<li><a href="{{ site.baseurl }}/archive">Archive</a></li>-->
                 <li><a href="{{ site.baseurl }}/blogs">Blogs</a></li>
                 <li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+                <li><a href="{{ site.baseurl }}/feedback">Feedback</a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
