Updated changes post DODI18
* Updated upcoming and past confs
* Updated upcoming and past workshops
* Removed past events from home page

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@
     font-size: 20px !important;
     letter-spacing: 0.05em !important;
     margin-bottom: 20px;
+    margin-left: 50px;
 }
 
 #slider ul.next-event-list {
@@ -265,13 +266,6 @@
     text-decoration: underline !important;
 }
 
-
-
-
-
-
-
-
-
-
-
+.address-block {
+    list-style: none;
+}
