--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: page
 
 <div class="post">
   <!-- Wrapper Start -->
-  <section id="intro" style="border: 1px dotted #ddd;">
+  <section id="intro">
     <div class="container">
       <div class="row">
         <div>
@@ -14,7 +14,7 @@ layout: page
               <p class="italic">By <span class="bold">{{ page.author }}</span> on <span class="bold">{{ page.date | date: "%B %-d, %Y" }}</span></p>
             </div>
             <hr />
-            <p>{{ content }}</p>
+            {{ content }}
           </div>
         </div><!-- .col-md-7 close -->
       </div>
