--- a/css/airspace.css
+++ b/css/airspace.css
@@ -7,6 +7,7 @@
  */
 
 @import url(//fonts.googleapis.com/css?family=Open+Sans:400,300,600);
+@import url(//fonts.googleapis.com/css?family=Work+Sans:400,300,600);
 @import url(//fonts.googleapis.com/css?family=Roboto:400,100,300,500,700);
 @import url(//fonts.googleapis.com/css?family=Volkhov:400italic);
 /* var text-decoration */
@@ -14,7 +15,7 @@
 	Common Css
 --*/
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Work Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 h1,
@@ -34,7 +35,7 @@ h3 {
   font-weight: 300;
 }
 p {
-  font-size: 15px;
+  font-size: 17px;
   line-height: 28px;
 }
 a,
@@ -52,10 +53,33 @@ a:active {
   font-weight: 600;
 }
 .section-title p {
-  font-family: 'Volkhov', serif;
-  font-style: italic;
+  font-family: 'Work-sans', sans-serif;
   color: #666;
+  font-size: 19px;
 }
+/*---- Post starts ---*/
+.post {
+  margin: 0 15px 0 15px;
+}
+.post p {
+  color: #404040 !important;
+}
+.post h3 {
+  font-size: 26px;
+  font-weight: 500;
+}
+#interview-section div {
+  font-size: 17px;
+  line-height: 28px;
+}
+.post img {
+  width: 200px !important;
+  height: 200px !important;
+  padding-left: 0 !important;
+  border-radius: 100%;
+  box-shadow: 0px 0px 30px #111;
+}
+/* Post end */
 /*--
 	Header Start
 --*/
@@ -670,7 +694,7 @@ font header .navbar-default .navbar-nav li a:hover {
   background: #47424C;
   border: none;
   color: #fff;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Work Sans', sans-serif;
   font-size: 18px;
 }
 /*--
@@ -715,7 +739,7 @@ font header .navbar-default .navbar-nav li a:hover {
   width: 100%;
 }
 #contact-box .block h2 {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Work Sans', sans-serif;
   font-weight: 300;
   color: #000;
   font-size: 28px;
