--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,21 @@ layout: page
           <div class="block">
             <h1>{{ page.title }}</h1>
             <div class="post-info-wrapper">
-              <p class="italic">By <span class="bold">{{ page.author }}</span> on <span class="bold">{{ page.date | date: "%B %-d, %Y" }}</span></p>
+              <p class="italic">By
+                <span class="bold">{{ page.author }}</span> on
+                <span class="bold">{{ page.date | date: "%b %-d, %Y" }}</span>
+                (~
+                  <span class="reading-time" title="Estimated read time">
+                    {% assign words = content | number_of_words %}
+                    {% if words < 360 %}
+                      1 min
+                    {% else %}
+                      {{ words | divided_by:180 }} mins
+                    {% endif %}
+                  </span>
+                  Read
+                )
+              </p>
             </div>
             <hr />
             {{ content }}
