--- a/css/airspace.css
+++ b/css/airspace.css
@@ -61,6 +61,9 @@ a:active {
 .post {
   margin: 0 15px 0 15px;
 }
+.post .post-info-wrapper p {
+  padding-top: 0px !important;
+}
 .post p {
   color: #404040 !important;
 }
