--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,17 +14,7 @@ layout: page
               <p class="italic">By
                 <span class="bold">{{ page.author }}</span> on
                 <span class="bold">{{ page.date | date: "%b %-d, %Y" }}</span>
-                (~
-                  <span class="reading-time" title="Estimated read time">
-                    {% assign words = content | number_of_words %}
-                    {% if words < 360 %}
-                      1 min
-                    {% else %}
-                      {{ words | divided_by:180 }} mins
-                    {% endif %}
-                  </span>
-                  Read
-                )
+                (~ {% include read-time.html content=content %} read)
               </p>
             </div>
             <hr />
