--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+  <!-- Favicon  -->
+  <link rel="icon" type="image/png" href="{{ site.baseurl }}/img/favicon.ico">
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/css/owl.carousel.css" />
   <link rel="stylesheet" href="{{ site.baseurl }}/css/bootstrap.min.css" />
